fix width of fullview on overflow

--- a/client/src/sass/components/_fullview.scss
+++ b/client/src/sass/components/_fullview.scss
@@ -1,13 +1,11 @@
 .view_container {
   height: inherit;
   display: flex;
-  // flex-flow: column;
-  // align-items: center;
+
   justify-content: space-between;
-  // justify-content: center;
 }
 .fullview {
-  margin: 2rem 10% 2rem 20%;
+  margin: 2rem 10% 2rem 15%;
   display: flex;
   flex-flow: column;
   align-items: center;
@@ -37,12 +35,12 @@
 
     padding: 10px;
     width: 95%;
+    overflow-wrap: break-word;
   }
   &-edits {
     width: 90%;
     display: flex;
     justify-content: space-between;
-    // border-bottom: 2px solid #35383a ;
     padding: 1rem;
     font-size: 20px;
     color: #35383a;
@@ -54,7 +52,6 @@
       color: #35383a;
       text-decoration: none;
       text-align: center;
-      // border: 1px solid #35383a;
       border-radius: 5px;
       padding: 8px;
       // box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
@@ -72,7 +69,6 @@
     align-self: center;
     text-align: center;
     width: 89%;
-    // border-bottom: 2px solid #35383a;
     padding: 30px;
     font-size: 24px;
   }
@@ -87,7 +83,6 @@
     padding: 10px 1px;
     line-height: 22px;
     font-size: 16px;
-    // min-width: 342px;
     overflow-wrap: break-word;
   }
 }
